fixing image overflow

--- a/src/pages/createHaiku/css/create.css
+++ b/src/pages/createHaiku/css/create.css
@@ -45,7 +45,8 @@
     flex-wrap: wrap;
     max-height: 95%;
     overflow: scroll;
-    
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .img-grid-item{
@@ -76,6 +77,7 @@
 }
 .baseBtns{
     padding-bottom: 30px;
+    margin-top: 20px;
 }
 .board-img{
     width: 100%;
